# bot-register

./: Cargo.toml
assets/: private.pem  public.pem
src/: lcu.rs  main.rs  register.rs  rsa_util.rs
